// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Italic lex(*a
b*) 1`] = `
[
  Text {
    "content": "a
b",
    "literal": "a
b",
    "scope": "inline",
  },
]
`;

exports[`Italic lex(*a
b*) 2`] = `
"[i]a
b[/i]"
`;

exports[`Italic lex(*a_b*) 1`] = `
[
  Text {
    "content": "a_b",
    "literal": "a_b",
    "scope": "inline",
  },
]
`;

exports[`Italic lex(*a_b*) 2`] = `"[i]a_b[/i]"`;

exports[`Italic lex(*foo \\* bar*) 1`] = `
[
  Text {
    "content": "foo \\* bar",
    "literal": "foo \\* bar",
    "scope": "inline",
  },
]
`;

exports[`Italic lex(*foo \\* bar*) 2`] = `"[i]foo \\* bar[/i]"`;

exports[`Italic lex(*foo* bar) 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;

exports[`Italic lex(*foo* bar) 2`] = `"[i]foo[/i]"`;

exports[`Italic lex(*foo*) 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;

exports[`Italic lex(*foo*) 2`] = `"[i]foo[/i]"`;

exports[`Italic lex(_foo_) 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;

exports[`Italic lex(_foo_) 2`] = `"[i]foo[/i]"`;
